feat: date range filter on GET /expenses